--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&family=Roboto&display=swap');
+@font-face {
+  font-family: 'Poppins';
+  src: url('../fonts/Poppins/fontawesome-webfont.eot?v=4.1.0');
+  src: url('../fonts/fontawesome-webfont.eot?#iefix&v=4.1.0') format('embedded-opentype'), url('../fonts/fontawesome-webfont.woff?v=4.1.0') format('woff'), url('../fonts/fontawesome-webfont.ttf?v=4.1.0') format('truetype'), url('../fonts/fontawesome-webfont.svg?v=4.1.0#fontawesomeregular') format('svg');
+  font-weight: normal;
+  font-style: normal;
+}
 *{
     font-family: 'Poppins', sans-serif;
     
@@ -9,9 +16,13 @@
     border:none;
     text-decoration:none;
     text-transform: capitalize;
+    
 }
 body {
   scroll-behavior: smooth;
+  font-size: 16px;
+    font-weight: 400;
+    color: #000;
 }
 ul{margin-left: 0;padding-left: 0}
 ul li{list-style: none;}
@@ -23,7 +34,7 @@ html{
     /*font-size: 62.5%;*/
     overflow-x: hidden;
 }
-.navbar.bg-blue, header{
+header{
     background: #F0FFF0;
 }
 .navbar .navbar-nav .nav-item .nav-link{color: #000;
@@ -54,6 +65,10 @@ html{
   color: #21B573 !important;
   background: #fff;
 }
+.banner{
+   background: #F0FFF0;
+   padding: 35px 0 65px;
+}
 .intro-text .btn{
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
@@ -63,17 +78,54 @@ html{
   background: #21B573;
   box-shadow: 0px 4px 4px 0px #00000040;
   border-radius: 33px;
+  padding: 12px 36px;
+  margin-top: 15px;
+}
+.intro-text p.para{
+ line-height: 36px;
 }
 .text-red{
     color: #FD511A;
 }
-.title{font-weight: 700;font-size: 48px;line-height: 70px;color: #000}
+.title{font-weight: 700;font-size: 48px;
+  line-height: 70px;color: #000;
+  margin: 10px 0 20px;padding-right: 100px;}
 .text-green{color: #21B573}
+.feature{
+  padding-bottom: 100px;
+}
+.s_feature{ 
+  padding: 55px 0 50px;
+  margin-top:40px;
+  text-align: center;
+  background: #F8FFFB;
+  transition: .33s;
+}
+
+.s_feature h2{
+  margin: 22px 0 0;
+  font-size: 24px;
+  font-weight: 500;
+  color: #413960;
+  line-height: 36px;
+}
+.s_feature p{ line-height: 24px;}
+
+.s_feature img{ width:68px;height:76px;}
+.s_feature:hover{
+  background: #fff;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+  /* border-radius: 10px; */
+  /* transition:all 0.3s ease; */
+  cursor: pointer;
+}
 .course-list{margin-bottom: 50px;margin-top: 30px;}
 .icon-container {
   background: #F8FFFB;
 border-radius: 10px;
+margin-bottom: 20px;
 }
+
 .icon-container img{
   width: 68px;
   height: 76px;
