--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,7 @@ header{
   line-height: 70px;color: #000;
   margin: 10px 0 20px;padding-right: 100px;}
 .text-green{color: #21B573}
+
 .feature{
   padding-bottom: 100px;
 }
@@ -119,6 +120,53 @@ header{
   /* transition:all 0.3s ease; */
   cursor: pointer;
 }
+.c_title{}
+.c_h1{
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 54px;
+  color: #000;
+}
+.c_item{
+  padding: 25px 20px 30px;
+  background: #fff;
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+  border-radius: 18px;
+  color: #000;
+}
+.c_img{}
+.c_img img{
+  border-radius: 11px
+}
+.c_item h2{
+  font-size: 24px;font-weight: 500;line-height: 36px;margin: 20px 0 0;
+}
+.c_item p{ line-height: 24px; }
+.c_item a.buy_btn{
+  padding: 8px 28px;
+  margin: 20px 0 35px;
+  font-family: 'Roboto', sans-serif;
+  line-height: 19px;
+  color: #fff;background: #21B573;
+  border-radius: 33px;                                     
+}
+a.buy_btn:hover{
+    color: #21B573 !important;
+  background: #fff;
+  border: 1px solid #21B573;
+}
+
+.c_footer{overflow: hidden;}
+.date{}
+.date ul{}
+.date ul li{}
+.date ul li span, .seat ul li span{font-weight: 500;
+    line-height: 24px;}
+.date ul li img{width: 15px;}
+.seat{
+}
+.seat ul{}
+.seat ul li img{width: 15px;}
 .course-list{margin-bottom: 50px;margin-top: 30px;}
 .icon-container {
   background: #F8FFFB;
